--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "upload": "hs upload functions/oauth-app.functions functions/oauth-app.functions",
-    "deploy": "npm run upload && hs functions deploy functions/oauth-app.functions",
+    "deploy": "npm run upload && hs functions deploy functions/oauth-app.functions"
   },
   "keywords": [],
   "author": "",
