--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "hubspot-oauth-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sample OAuth Application",
   "main": "index.js",
   "scripts": {
     "upload": "hs upload functions/oauth-app.functions functions/oauth-app.functions",
     "deploy": "npm run upload && hs functions deploy functions/oauth-app.functions"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [],
-  "author": "",
+  "author": "HubSpot Marketing WebTeam",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4"
   },
   "devDependencies": {
+    "@hs-web-team/eslint-config-node": "^0.2.3",
     "@hubspot/cli": "^4.1.6"
   }
 }
